--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./style.css/flex-estilo.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>MundoPesca</title>
 </head>
 
@@ -72,15 +72,17 @@
             </div>
           </div>
         <section class="normas">
-            <div>
+            <div class="normas__texto">
                 <h4>Conciencia y Respeto</h4>
                 <p>
                     Fomentemos la pesca responsable,el cuidado de las especies y la higiene de espacios publico.<br>
                     Deberán ordenarse las pesquerías con el fin de asegurar que la pesca y la elaboración de pescado se realicen de forma que se reduzcan al mínimo los efectos negativos sobre el medio ambiente, disminuyan los desperdicios y se mantenga la calidad del pescado capturado.
                 </p>
             </div>
-            <a href="https://www.fao.org/3/x9066s/x9066s01.htm#:~:text=El%20C%C3%B3digo%20de%20Conducta%20insiste,recursos%20%C3%ADcticos%20y%20su%20h%C3%A1bitat." target="_blank">Ley FAO
-            </a>
+            <div class="normas__a">
+                <a href="https://www.fao.org/3/x9066s/x9066s01.htm#:~:text=El%20C%C3%B3digo%20de%20Conducta%20insiste,recursos%20%C3%ADcticos%20y%20su%20h%C3%A1bitat." target="_blank" >Ley FAO
+                </a>
+            </div>
         </section>
         <section class="permisos">
             <div class="permisos__solicitud">
@@ -100,24 +102,24 @@
         </section>
     </main>
 
-    <footer>
-        <div>
-            <ul>
-                <li>
+    <footer class="footer">
+        <div class="footer__iconos">
+            <ul class="footer__iconos__lista">
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
-        <h5>
+        <h5 class="footer__copyright">
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
     </footer>
