--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../style.css/flex-estilo.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>MundoPesca</title>
 </head>
 
@@ -190,24 +190,24 @@
             </p>
         </section>
     </main>
-    <footer>
-        <div>
-            <ul>
-                <li>
+    <footer class="footer">
+        <div class="footer__iconos">
+            <ul class="footer__iconos__lista">
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
-        <h5>
+        <h5 class="footer__copyright">
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
     </footer>
