--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -20,7 +20,7 @@
             <div class="logo"><img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
-                <h1 class="tituloB">MundoPesca</h1>
+                <h2 class="tituloB">MundoPesca</h2>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -28,9 +28,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
-
                     <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="../index.html">Home</a>
@@ -52,6 +50,7 @@
             </div>
         </nav>
     </header>
+
     <main class="main-grid-tienda">
         <section class="equipo">
             <h2>Contamos con el mejor equipamiento</h2>
@@ -74,7 +73,7 @@
                 <h4 id="reel">REELS</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/ShimanoSedonaC3000DH.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/ShimanoSedonaC3000DH.jpg" class="card-img-top" alt="ShimanoSedonaC3000DH">
                         <div class="card-body">
                           <h5 class="card-title">Reel Shimano Sedona</h5>
                           <p class="card-text">Reel frontal para pesca de profundidad y variada. perfecto para cañas de a tramos o telesópica.</p>
@@ -82,7 +81,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/FrontalShimanoSienna2500.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/FrontalShimanoSienna2500.jpg" class="card-img-top" alt="FrontalShimanoSienna2500">
                         <div class="card-body">
                           <h5 class="card-title">Reel Shimano Sienna</h5>
                           <p class="card-text">Reel frontal para pesca de profundidad y variada. perfecto para cañas de a tramos.</p>
@@ -90,7 +89,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/ReelRotativoShimanoCaius151.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/ReelRotativoShimanoCaius151.jpg" class="card-img-top" alt="ReelRotativoShimanoCaius151">
                         <div class="card-body">
                           <h5 class="card-title">Reel Rotativo Caius</h5>
                           <p class="card-text">Reel excelente para pesca variada y mosca. con 8 rulemanes de rotacion.</p>
@@ -98,11 +97,11 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/PennSlammer.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/PennSlammer.jpg" class="card-img-top" alt="PennSlammer">
                         <div class="card-body">
-                          <h5 class="card-title">Reel Rotativo PennSlammer</h5>
-                          <p class="card-text">Reel excelente para pesca variada y mosca. con 6 rulemanes de rotacion.</p>
-                          <a href="#" class="btn btn-primary">Ir a tienda</a>
+                            <h5 class="card-title">Reel Rotativo PennSlammer</h5>
+                            <p class="card-text">Reel excelente para pesca variada y mosca. con 6 rulemanes de rotacion.</p>
+                            <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +110,7 @@
                 <h4 id="cañas">CAÑAS</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/CaniaShimanoFxs50.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/CaniaShimanoFxs50.jpg" class="card-img-top" alt="CaniaShimanoFxs50">
                         <div class="card-body">
                           <h5 class="card-title">Shimano Fxs50</h5>
                           <p class="card-text">Caña dos tramos, 2.5 mts. Perfecta para reel frontal.Fibra de carbono. Pesca mayor o embarcado.</p>
@@ -119,7 +118,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/CaniaShimanoSpinningFws100.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/CaniaShimanoSpinningFws100.jpg" class="card-img-top" alt="CaniaShimanoSpinningFws100">
                         <div class="card-body">
                           <h5 class="card-title">Shimano Fws100</h5>
                           <p class="card-text">Caña dos tramos, 2.2 mts. Perfecta para reel frontal.Fibra de carbono. Pesca mayor o embarcado.</p>
@@ -127,7 +126,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/CaniaBaitcastF150pro.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/CaniaBaitcastF150pro.jpg" class="card-img-top" alt="CaniaBaitcastF150pro">
                         <div class="card-body">
                           <h5 class="card-title">Baitcast F150 pro</h5>
                           <p class="card-text">Caña de un tramo, 1.8 mts. Perfecta para la pesca variada, reel rotativo. Pesca con mosca.</p>
@@ -135,7 +134,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/caniaFeederPeje.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/caniaFeederPeje.jpg" class="card-img-top" alt="caniaFeederPeje">
                         <div class="card-body">
                           <h5 class="card-title">Feeder Peje PJ500</h5>
                           <p class="card-text">Caña 4 tramos, 2 mts. Flexible, perfecta para pesca de Pejerrey. Rinde con variead de reel</p>
@@ -148,7 +147,7 @@
                 <h4 id="vestimenta">INDUMENTARIA</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/conjuntoMosca.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/conjuntoMosca.jpg" class="card-img-top" alt="conjuntoMosca">
                         <div class="card-body">
                           <h5 class="card-title">Conjunto Mosca</h5>
                           <p class="card-text">Conjunto de invierno, cierre impermeable. Capucha guardable. Codos y hombros preformados.</p>
@@ -156,7 +155,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/camisetaNegraLurestar-ml.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/camisetaNegraLurestar-ml.jpg" class="card-img-top" alt="camisetaNegraLurestar-ml">
                         <div class="card-body">
                           <h5 class="card-title">Remera Lurestar</h5>
                           <p class="card-text">Secado rápido. Alta proteccion UV. Antienganches. No se reduce con lavado, ani-arrugas.</p>
@@ -164,7 +163,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/conjuntoFinsinpleeOtonoPrimavera.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/conjuntoFinsinpleeOtonoPrimavera.jpg" class="card-img-top" alt="conjuntoFinsinpleeOtonoPrimavera">
                         <div class="card-body">
                           <h5 class="card-title">Conjunto Mosca 2</h5>
                           <p class="card-text">Conjunto de invierno, reversible. Capucha guardable. Puños con presillas elásticas.</p>
@@ -181,7 +180,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <section class="cursos">
             <h4>Cursos</h4>
@@ -190,6 +188,7 @@
             </p>
         </section>
     </main>
+
     <footer class="footer">
         <div class="footer__iconos">
             <ul class="footer__iconos__lista">
@@ -211,8 +210,8 @@
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
-
 </html>
